--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>ofo</title>
+    <title>深圳市小鹿科技有限公司</title>
   </head>
   <body>
     <div id="app"></div>
