--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>深圳市小鹿科技有限公司</title>
+    <link rel="shortcut icon" type="image/x-icon" href="/static/logo.png">
   </head>
   <body>
     <div id="app"></div>
