--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>深圳市小鹿科技有限公司</title>
+    <title>小鹿科技</title>
     <link rel="shortcut icon" type="image/x-icon" href="/static/img/favicon.ico">
   </head>
   <body>
